@@ -110,6 +110,19 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-exports com.neighborhood_manager/com.neighborhood_manager=ALL-UNNAMED
+                        --add-exports com.neighborhood_manager/com.neighborhood_manager.models=ALL-UNNAMED
+                        --add-opens com.neighborhood_manager/com.neighborhood_manager=ALL-UNNAMED
+                        --add-opens com.neighborhood_manager/com.neighborhood_manager.models=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.5.1</version>
                 <executions>
